[gd_scene load_steps=10 format=3 uid="uid://d2gemev5gs7pc"]

[ext_resource type="Script" path="res://level3.gd" id="1_ek7ji"]
[ext_resource type="TileSet" uid="uid://bxalumk13aqel" path="res://tiles/tileset.tres" id="1_gmt83"]
[ext_resource type="PackedScene" uid="uid://cv44a3f4f6rhh" path="res://door.tscn" id="2_u7tca"]
[ext_resource type="PackedScene" uid="uid://vbvmm2v2b0jg" path="res://gear.tscn" id="4_t6aia"]
[ext_resource type="PackedScene" uid="uid://cwitq4m302w3o" path="res://pressureplate.tscn" id="5_ugxi7"]
[ext_resource type="PackedScene" uid="uid://cs8h8mde5pqlb" path="res://spike.tscn" id="6_p7sro"]
[ext_resource type="FontFile" uid="uid://bkoydq55snmj8" path="res://gobaaahandwrittencomic-regular-webfont.ttf" id="6_yglya"]
[ext_resource type="Script" path="res://powerable.gd" id="7_05kqi"]
[ext_resource type="AudioStream" uid="uid://csok6sudtr1rn" path="res://sounds/retract.mp3" id="8_0nq47"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_ek7ji")

[node name="TileMap" type="TileMap" parent="."]
z_index = 4
tile_set = ExtResource("1_gmt83")
format = 2
layer_0/tile_data = PackedInt32Array(589824, 196608, 0, 524288, 327680, 0, 524289, 65536, 0, 524290, 65536, 0, 524291, 65536, 0, 524292, 65536, 0, 524293, 65536, 0, 524294, 393216, 0, 655360, 196608, 0, 720896, 196608, 0, 786432, 196608, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 262144, 0, 655362, 0, 0, 655361, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 262144, 0, 655366, 262144, 0, 851968, 196608, 0, 917504, 196608, 0, 983040, 196608, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 262144, 0, 851974, 262144, 0, 851973, 0, 0, 851972, 0, 0, 851971, 0, 0, 851970, 0, 0, 851969, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 262144, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 196608, 1, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983047, 65536, 0, 983050, 65536, 0, 983049, 131072, 3, 851979, 196608, 0, 917515, 196608, 0, 786443, 196608, 0, 720907, 196608, 0, 655371, 196608, 0, 589835, 196608, 0, 524299, 327680, 0, 524300, 65536, 0, 524301, 65536, 0, 524302, 65536, 0, 524303, 65536, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 655375, 0, 0, 655374, 0, 0, 655373, 0, 0, 655372, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 786447, 0, 0, 786446, 0, 0, 786445, 0, 0, 786444, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851980, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 1048584, 131072, 1, 1048583, 131072, 1, 1048582, 131072, 1, 1048581, 131072, 1, 1048580, 131072, 1, 1048579, 131072, 1, 1048578, 131072, 1, 1048577, 131072, 1, 1048585, 131072, 1, 1048586, 131072, 1, 1048587, 131072, 1, 1048588, 131072, 1, 1048589, 131072, 1, 1048590, 131072, 1, 1048591, 131072, 1, 1048592, 131072, 1, 1048593, 65536, 1, 1048576, 0, 1, 917512, 262144, 2, 917513, 327680, 2, 983056, 0, 0, 917520, 0, 0, 851984, 0, 0, 786448, 0, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 524304, 65536, 0, 524305, 393216, 0, 589841, 262144, 0, 655377, 262144, 0, 720913, 262144, 0, 786449, 262144, 0, 851985, 262144, 0, 917521, 262144, 0, 983057, 262144, 0, 262155, 0, 1, 262161, 65536, 1, 262156, 131072, 1, 262157, 131072, 1, 262158, 131072, 1, 262159, 131072, 1, 262160, 131072, 1, 196619, 196608, 0, 131083, 196608, 0, 65547, 196608, 0, 11, 196608, 0, 17, 262144, 0, 65553, 262144, 0, 131089, 262144, 0, 196625, 262144, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 131088, 0, 0, 131087, 0, 0, 131086, 0, 0, 131085, 0, 0, 131084, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, -65525, 196608, 0, -131061, 196608, 0, -196597, 196608, 0, -262133, 196608, 0, -327669, 196608, 0, -393205, 196608, 0, -458741, 196608, 0, -524277, 196608, 0, -589813, 196608, 0, -655349, 196608, 0, -655348, 0, 0, -655347, 0, 0, -655346, 0, 0, -655345, 0, 0, -65519, 262144, 0, -131055, 262144, 0, -196591, 262144, 0, -262127, 262144, 0, -327663, 262144, 0, -393199, 262144, 0, -458735, 262144, 0, -524271, 262144, 0, -589807, 262144, 0, -655343, 262144, 0, -655344, 0, 0, -589812, 0, 0, -589811, 0, 0, -589810, 0, 0, -589809, 0, 0, -589808, 0, 0, -524272, 0, 0, -524273, 0, 0, -524274, 0, 0, -524275, 0, 0, -524276, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -393200, 0, 0, -393201, 0, 0, -393202, 0, 0, -393203, 0, 0, -393204, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -262129, 0, 0, -262130, 0, 0, -262131, 0, 0, -262132, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -262128, 0, 0, -196592, 0, 0, -131056, 0, 0, -131057, 0, 0, -196596, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -65520, 0, 0, -65521, 0, 0, -65522, 0, 0, -65523, 0, 0, -65524, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, -720885, 196608, 0, -786421, 196608, 0, -851957, 196608, 0, -917493, 196608, 0, -983029, 196608, 0, -1048565, 196608, 0, -1114101, 196608, 0, -1179637, 196608, 0, -1245173, 196608, 0, -1310709, 196608, 0, -1376245, 196608, 0, -1441781, 196608, 0, -1507317, 196608, 0, -1572853, 196608, 0, -1638389, 196608, 0, -1703925, 196608, 0, -1769461, 327680, 0, -720879, 262144, 0, -786415, 262144, 0, -851951, 262144, 0, -917487, 262144, 0, -983023, 262144, 0, -1048559, 262144, 0, -1114095, 262144, 0, -1179631, 262144, 0, -1245167, 262144, 0, -1310703, 262144, 0, -1376239, 262144, 0, -1441775, 262144, 0, -1507311, 262144, 0, -1572847, 262144, 0, -1638383, 262144, 0, -1703919, 262144, 0, -1769455, 393216, 0, -1769460, 65536, 0, -1769459, 65536, 0, -1769458, 65536, 0, -1769457, 65536, 0, -1769456, 65536, 0, -1703924, 0, 0, -1703923, 0, 0, -1703922, 0, 0, -1703921, 0, 0, -1638385, 0, 0, -1638384, 0, 0, -1703920, 0, 0, -1638386, 0, 0, -1638387, 0, 0, -1638388, 0, 0, -1572852, 0, 0, -1572851, 0, 0, -1572850, 0, 0, -1572849, 0, 0, -1572848, 0, 0, -1507312, 0, 0, -1507313, 0, 0, -1507314, 0, 0, -1507315, 0, 0, -1507316, 0, 0, -1376243, 0, 0, -1441779, 0, 0, -1441780, 0, 0, -1376244, 0, 0, -1310708, 0, 0, -1245172, 0, 0, -1179636, 0, 0, -1114100, 0, 0, -1048564, 0, 0, -983028, 0, 0, -917492, 0, 0, -851956, 0, 0, -786420, 0, 0, -720884, 0, 0, -720883, 0, 0, -786419, 0, 0, -851955, 0, 0, -917491, 0, 0, -983027, 0, 0, -1048563, 0, 0, -1114099, 0, 0, -1179635, 0, 0, -1245171, 0, 0, -1310707, 0, 0, -1310706, 0, 0, -1376242, 0, 0, -1441778, 0, 0, -1441777, 0, 0, -1376241, 0, 0, -1310705, 0, 0, -1245169, 0, 0, -1245170, 0, 0, -1179634, 0, 0, -1114098, 0, 0, -1048562, 0, 0, -983026, 0, 0, -917490, 0, 0, -851954, 0, 0, -786418, 0, 0, -720882, 0, 0, -720881, 0, 0, -786417, 0, 0, -851953, 0, 0, -917489, 0, 0, -983025, 0, 0, -1048561, 0, 0, -1114097, 0, 0, -1179633, 0, 0, -1179632, 0, 0, -1245168, 0, 0, -1310704, 0, 0, -1376240, 0, 0, -1441776, 0, 0, -1114096, 0, 0, -1048560, 0, 0, -983024, 0, 0, -917488, 0, 0, -851952, 0, 0, -786416, 0, 0, -720880, 0, 0, 983048, 65536, 3, 983051, 327680, 1)

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2(145, 356)

[node name="CameraSpawn" type="Node2D" parent="."]

[node name="Door" parent="." instance=ExtResource("2_u7tca")]
position = Vector2(1057, 444)
new_level_id = 2
powered = true

[node name="Gear" parent="." instance=ExtResource("4_t6aia")]
z_index = 5
position = Vector2(576, 583)
scale = Vector2(0.25, 0.25)
gear_rotation = 30

[node name="PressurePlate" parent="." node_paths=PackedStringArray("powerables") instance=ExtResource("5_ugxi7")]
position = Vector2(672, 960)
scale = Vector2(0.7, 0.7)
powerables = [NodePath("../TopSpikeRetractor")]

[node name="PressurePlate2" parent="." node_paths=PackedStringArray("powerables") instance=ExtResource("5_ugxi7")]
position = Vector2(480, 960)
scale = Vector2(0.7, 0.7)
powerables = [NodePath("../BottomSpikeRetractor")]

[node name="roast" type="Label" parent="."]
z_index = 10
offset_left = 728.0
offset_top = -894.0
offset_right = 1518.0
offset_bottom = -699.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_yglya")
theme_override_font_sizes/font_size = 100
text = "why are you up here?
play the level."

[node name="BottomSpikes" type="Node2D" parent="."]
position = Vector2(733, 486)
scale = Vector2(0.4, 0.4)

[node name="Spike3" parent="BottomSpikes" instance=ExtResource("6_p7sro")]
position = Vector2(147.5, 0)
scale = Vector2(1, 1)

[node name="Spike2" parent="BottomSpikes" instance=ExtResource("6_p7sro")]
position = Vector2(292.5, 0)
scale = Vector2(1, 1)

[node name="Spike" parent="BottomSpikes" instance=ExtResource("6_p7sro")]
scale = Vector2(1, 1)

[node name="retract1" type="AudioStreamPlayer2D" parent="BottomSpikes"]
stream = ExtResource("8_0nq47")
volume_db = -6.0

[node name="TopSpikes" type="Node2D" parent="."]

[node name="Spike4" parent="TopSpikes" instance=ExtResource("6_p7sro")]
position = Vector2(733, 346)
rotation = -3.14159

[node name="Spike5" parent="TopSpikes" instance=ExtResource("6_p7sro")]
position = Vector2(850, 346)
rotation = -3.14159

[node name="Spike6" parent="TopSpikes" instance=ExtResource("6_p7sro")]
position = Vector2(792, 346)
rotation = -3.14159

[node name="retract2" type="AudioStreamPlayer2D" parent="TopSpikes"]
stream = ExtResource("8_0nq47")

[node name="BottomSpikeRetractor" type="Node2D" parent="."]
script = ExtResource("7_05kqi")

[node name="TopSpikeRetractor" type="Node2D" parent="."]
script = ExtResource("7_05kqi")

[connection signal="power_changed" from="BottomSpikeRetractor" to="." method="_on_spike_retractor_power_changed"]
[connection signal="power_changed" from="TopSpikeRetractor" to="." method="_on_top_spike_retractor_power_changed"]
